--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -9,6 +9,7 @@
     font-family: "aktiv-grotesk";
     text-transform: uppercase;
     margin-top: 0;
+    letter-spacing: 0;
 }
 
 .title-mobile-common {
